--- a/config/samples/proxmox_v1alpha1_virtualmachineset2.yaml
+++ b/config/samples/proxmox_v1alpha1_virtualmachineset2.yaml
@@ -7,7 +7,7 @@ metadata:
     app.kubernetes.io/part-of: kubemox
     app.kubernetes.io/managed-by: kustomize
     app.kubernetes.io/created-by: kubemox
-  name: virtualmachineset-test
+  name: virtualmachineset2-test
 spec:
   replicas: 2
   nodeName: lowtower
