--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -3,4 +3,6 @@ resources:
 - proxmox_v1alpha1_virtualmachine.yaml
 - proxmox_v1alpha1_managedvirtualmachine.yaml
 - proxmox_v1alpha1_virtualmachineset.yaml
+- proxmox_v1alpha1_virtualmachinesnapshot.yaml
+- proxmox_v1alpha1_virtualmachinesnapshotpolicy.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
