--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -5,6 +5,8 @@ resources:
 - bases/proxmox.alperen.cloud_virtualmachines.yaml
 - bases/proxmox.alperen.cloud_managedvirtualmachines.yaml
 - bases/proxmox.alperen.cloud_virtualmachinesets.yaml
+- bases/proxmox.alperen.cloud_virtualmachinesnapshots.yaml
+- bases/proxmox.alperen.cloud_virtualmachinesnapshotpolicies.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -13,6 +15,8 @@ patches:
 #- path: patches/webhook_in_virtualmachines.yaml
 #- path: patches/webhook_in_managedvirtualmachines.yaml
 #- path: patches/webhook_in_virtualmachinesets.yaml
+#- path: patches/webhook_in_virtualmachinesnapshots.yaml
+#- path: patches/webhook_in_virtualmachinesnapshotpolicies.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -20,6 +24,8 @@ patches:
 #- path: patches/cainjection_in_virtualmachines.yaml
 #- path: patches/cainjection_in_managedvirtualmachines.yaml
 #- path: patches/cainjection_in_virtualmachinesets.yaml
+#- path: patches/cainjection_in_virtualmachinesnapshots.yaml
+#- path: patches/cainjection_in_virtualmachinesnapshotpolicies.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
