--- a/charts/kubemox/templates/deployment.yaml
+++ b/charts/kubemox/templates/deployment.yaml
@@ -52,18 +52,38 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
-          - name: PROXMOX_IP
-            value: {{ .Values.proxmox.IPAddress }} 
+          - name: PROXMOX_ENDPOINT
+            value: {{ .Values.proxmox.endpoint }} 
+          - name: PROXMOX_INSECURE_SKIP_TLS_VERIFY
+            value: {{ .Values.proxmox.insecureSkipTLSVerify | quote }}
+          {{- if .Values.proxmox.tokenID }}
           - name: PROXMOX_TOKEN_ID
             valueFrom:
               secretKeyRef:
                 name: proxmox-credentials 
-                key: tokenId
+                key: tokenID
+          {{- end }}
+          {{- if .Values.proxmox.secret }}
           - name: PROXMOX_SECRET
             valueFrom:
               secretKeyRef:
                 name: proxmox-credentials 
                 key: secret
+          {{- end }}
+          {{- if .Values.proxmox.username }}
+          - name: PROXMOX_USERNAME
+            valueFrom:
+              secretKeyRef:
+                name: proxmox-credentials 
+                key: username
+          {{- end }}
+          {{- if .Values.proxmox.password }}
+          - name: PROXMOX_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: proxmox-credentials 
+                key: password
+          {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
