--- a/.github/workflows/golangci-lint.yaml
+++ b/.github/workflows/golangci-lint.yaml
@@ -18,5 +18,9 @@ jobs:
         with:
           go-version: 1.20.5 # Replace with the Go version you're using
 
+      - name: Install golangci-lint
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.54.2
+
       - name: Run Linter
         run: golangci-lint run
