--- a/charts/kubemox/templates/role.yaml
+++ b/charts/kubemox/templates/role.yaml
@@ -146,3 +146,37 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - proxmox.alperen.cloud
+  resources:
+  - containers/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - proxmox.alperen.cloud
+  resources:
+  - containers
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - proxmox.alperen.cloud
+  resources:
+  - containers/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - proxmox.alperen.cloud
+  resources:
+  - containers/status
+  verbs:
+  - get
+  - patch
+  - update
