--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
 - bases/proxmox.alperen.cloud_virtualmachinesets.yaml
 - bases/proxmox.alperen.cloud_virtualmachinesnapshots.yaml
 - bases/proxmox.alperen.cloud_virtualmachinesnapshotpolicies.yaml
+- bases/proxmox.alperen.cloud_containers.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -17,6 +18,7 @@ patches:
 #- path: patches/webhook_in_virtualmachinesets.yaml
 #- path: patches/webhook_in_virtualmachinesnapshots.yaml
 #- path: patches/webhook_in_virtualmachinesnapshotpolicies.yaml
+#- path: patches/webhook_in_containers.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -26,6 +28,7 @@ patches:
 #- path: patches/cainjection_in_virtualmachinesets.yaml
 #- path: patches/cainjection_in_virtualmachinesnapshots.yaml
 #- path: patches/cainjection_in_virtualmachinesnapshotpolicies.yaml
+#- path: patches/cainjection_in_containers.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
