--- a/config/crd/bases/proxmox.alperen.cloud_containers.yaml
+++ b/config/crd/bases/proxmox.alperen.cloud_containers.yaml
@@ -87,10 +87,18 @@ spec:
           status:
             description: ContainerStatus defines the observed state of Container
             properties:
+              id:
+                type: integer
+              name:
+                type: string
+              node:
+                type: string
               state:
                 description: 'INSERT ADDITIONAL STATUS FIELD - define observed state
                   of cluster Important: Run "make" to regenerate code after modifying
                   this file'
+                type: string
+              uptime:
                 type: string
             type: object
         type: object
