--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,33 +1,36 @@
-name: docker-build 
+name: Release
 
 on:
   push:
-    branches:
-      - "main"
-
-env:
-  TEST_TAG: alperencelik/kubemox:test
-  LATEST_TAG: alperencelik/kubemox:latest 
+    tags:
+      - '*'
 
 jobs:
-  docker:
+  verify:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
+      - name: Set up Go
+        uses: actions/setup-go@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      - name: Build and push
-        uses: docker/build-push-action@v5
+          go-version: 1.21
+
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Run mage.go
+        run: go run mage.go
+
+  release:
+    needs: verify
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Go
+        uses: actions/setup-go@v2
         with:
-          context: .
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: ${{ env.LATEST_TAG }}
+          go-version: 1.21
+
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Run mage.go Release
+        run: go run mage.go Release
