Test github action for mage release

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,22 +6,22 @@ on:
       - '*'
 
 jobs:
-  verify:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set up Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.21
+#  verify:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Set up Go
+#        uses: actions/setup-go@v2
+#        with:
+#          go-version: 1.21
 
-      - name: Check out code
-        uses: actions/checkout@v2
+#      - name: Check out code
+#        uses: actions/checkout@v2
 
-      - name: Run mage.go
-        run: go run mage.go
+#      - name: Run mage.go
+#        run: go run mage.go
 
   release:
-    needs: verify
+#    needs: verify
     runs-on: ubuntu-latest
     steps:
       - name: Set up Go
@@ -36,6 +36,9 @@ jobs:
         run: |
           echo "BUILD_IMAGE=golang:1.21" >> $GITHUB_ENV
           echo "KO_DOCKER_REPO=alperencelik/kubemox" >> $GITHUB_ENV
+      
+      - name: Log in to Docker registry
+        run: echo "${{ secrets.DOCKERHUB_USERNAME }}\n${{ secrets.DOCKERHUB_PASSWORD }}" | ko login dockerhub --username-stdin
         
       - name: Run mage.go Release
         run: go run mage.go Release
