Add RELEASE_TOKEN for creating release on GH

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -45,3 +45,5 @@ jobs:
         
       - name: Run mage.go Release
         run: go run mage.go Release
+        with: 
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
