fix: Add RELEASE_TOKEN for creating release on GH

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -45,5 +45,5 @@ jobs:
         
       - name: Run mage.go Release
         run: go run mage.go Release
-        with: 
+        env: 
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
