--- a/.github/workflows/golangci-lint.yaml
+++ b/.github/workflows/golangci-lint.yaml
@@ -1,26 +1,26 @@
-# name: GolangCI-Lint
+name: GolangCI-Lint
 
-# on:
-#   pull_request:
-#     types: [opened, edited, synchronize, reopened]
+on:
+  pull_request:
+    types: [opened, edited, synchronize, reopened]
 
-# jobs:
-#   lint:
-#     name: Lint
-#     runs-on: ubuntu-latest
+jobs:
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
 
-#     steps:
-#       - name: Checkout Repository
-#         uses: actions/checkout@v2
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-#       - name: Set Up Go
-#         uses: actions/setup-go@v2
-#         with:
-#           go-version: 1.20.5 # Replace with the Go version you're using
+      - name: Set Up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.20.5 # Replace with the Go version you're using
 
-#       - name: Install golangci-lint
-#         run: |
-#           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.54.2
+      - name: Install golangci-lint
+        run: |
+          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.54.2
 
-#       - name: Run Linter
-#         run: golangci-lint run --timeout 10m --verbose 
+      - name: Run Linter
+        run: golangci-lint run --timeout 10m --verbose 
