--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
     - VirtualMachineSnapshotPolicy: crds/virtualmachinesnapshotpolicy.md
   - Containers (LXC): 
     - Container: crds/container.md
+- metrics.md
 - contributing.md
 - roadmap.md
 - Releases ⧉: https://github.com/alperencelik/kubemox/releases
