feat: Add glightbox plugin for docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,3 +41,20 @@ theme:
     toggle:
       icon: material/brightness-4
       name: Switch to light mode
+
+plugins: 
+   - glightbox:
+       touchNavigation: true
+       loop: false
+       effect: zoom
+       slide_effect: slide
+       width: 100%
+       height: auto
+       zoomable: true
+       draggable: true
+       skip_classes:
+         - custom-skip-class-name
+       auto_caption: false
+       caption_position: bottom
+       background: white
+       shadow: true
