--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -24,5 +24,6 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install mkdocs-material 
+      # Install plugins
+      - run: pip install mkdocs-material mkdocs-glightbox 
       - run: mkdocs gh-deploy --force
