--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -6,4 +6,5 @@ resources:
 - proxmox_v1alpha1_virtualmachinesnapshot.yaml
 - proxmox_v1alpha1_virtualmachinesnapshotpolicy.yaml
 - proxmox_v1alpha1_container.yaml
+- proxmox_v1alpha1_customcertificate.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
