--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -17,6 +17,14 @@ rules:
   - update
   - watch
 - apiGroups:
+  - apiextensions.k8s.io
+  resources:
+  - customresourcedefinitions
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
   - proxmox.alperen.cloud
   resources:
   - containers
