--- a/config/samples/proxmox_v1alpha1_customcertificate.yaml
+++ b/config/samples/proxmox_v1alpha1_customcertificate.yaml
@@ -9,4 +9,22 @@ metadata:
     app.kubernetes.io/created-by: kubemox
   name: customcertificate-sample
 spec:
-  # TODO(user): Add fields here
+  nodeName: "lowtower"
+  certManagerSpec:
+    commonName: "proxmox.alperen.cloud"
+    dnsNames:
+      - "proxmox.alperen.cloud"
+    issuerRef:
+      group: cert-manager.io
+      kind: ClusterIssuer
+      name: acme-issuer
+    secretName: proxmox-alperen-cloud-tls
+    usages: 
+      - client auth
+      - server auth
+  proxmoxCertSpec: 
+    nodeName: "lowtower"
+    force: true
+    restartProxy: true
+#   certificate: will be filled by cert-manager created secret
+#   privateKey: will be filled by cert-manager created secret
