--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
 - bases/proxmox.alperen.cloud_virtualmachinesnapshotpolicies.yaml
 - bases/proxmox.alperen.cloud_containers.yaml
 - bases/proxmox.alperen.cloud_customcertificates.yaml
+- bases/proxmox.alperen.cloud_storagedownloadurls.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -21,6 +22,7 @@ patches:
 #- path: patches/webhook_in_virtualmachinesnapshotpolicies.yaml
 #- path: patches/webhook_in_containers.yaml
 #- path: patches/webhook_in_proxmox_customcertificates.yaml
+#- path: patches/webhook_in_proxmox_storagedownloadurls.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -32,6 +34,7 @@ patches:
 #- path: patches/cainjection_in_virtualmachinesnapshotpolicies.yaml
 #- path: patches/cainjection_in_containers.yaml
 #- path: patches/cainjection_in_proxmox_customcertificates.yaml
+#- path: patches/cainjection_in_proxmox_storagedownloadurls.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
