--- a/examples/virtualmachineclone.yaml
+++ b/examples/virtualmachineclone.yaml
@@ -25,4 +25,57 @@ spec:
     network:
       - model: virtio
         bridge: vmbr0
-
+---
+apiVersion: proxmox.alperen.cloud/v1alpha1
+kind: VirtualMachine
+metadata:
+  name: virtualmachine-sample-clone-2 
+spec:
+  name: virtualmachine-sample-clone-2
+  # Name of the node where the VM will be created
+  nodeName: lowtower
+  template:
+    # Name of the template to be cloned
+    name: fedora-template 
+    # CPU cores to be allocated to the VM
+    cores: 2
+    # CPU sockets to be allocated to the VM
+    socket: 1
+    # Memory to be allocated to the VM
+    memory: 4096 # As MB
+    # Disk used by the VM
+    disk: 
+      - storage: nvme 
+        size: 50 # As GB
+        type: scsi
+    # Network interfaces used by the VM
+    network:
+      - model: virtio
+        bridge: vmbr0
+---
+apiVersion: proxmox.alperen.cloud/v1alpha1
+kind: VirtualMachine
+metadata:
+  name: virtualmachine-sample-clone-3
+spec:
+  name: virtualmachine-sample-clone-3
+  # Name of the node where the VM will be created
+  nodeName: lowtower
+  template:
+    # Name of the template to be cloned
+    name: fedora-template 
+    # CPU cores to be allocated to the VM
+    cores: 2
+    # CPU sockets to be allocated to the VM
+    socket: 1
+    # Memory to be allocated to the VM
+    memory: 4096 # As MB
+    # Disk used by the VM
+    disk: 
+      - storage: nvme 
+        size: 50 # As GB
+        type: scsi
+    # Network interfaces used by the VM
+    network:
+      - model: virtio
+        bridge: vmbr0
