--- a/config/crd/bases/proxmox.alperen.cloud_containers.yaml
+++ b/config/crd/bases/proxmox.alperen.cloud_containers.yaml
@@ -158,16 +158,34 @@ spec:
                   - type
                   type: object
                 type: array
-              id:
-                type: integer
-              name:
-                type: string
-              node:
-                type: string
-              state:
-                type: string
-              uptime:
-                type: string
+              status:
+                properties:
+                  IPAddress:
+                    description: IPAddress is the IP address of the VM
+                    type: string
+                  OSInfo:
+                    description: OSInfo is the OS information of the VM
+                    type: string
+                  id:
+                    description: ID is the ID of the VM
+                    type: integer
+                  node:
+                    description: Node is the name of the node
+                    type: string
+                  state:
+                    description: State is the state of the VM
+                    type: string
+                  uptime:
+                    description: Uptime is the uptime of the VM
+                    type: string
+                required:
+                - IPAddress
+                - OSInfo
+                - id
+                - node
+                - state
+                - uptime
+                type: object
             type: object
         type: object
     served: true
