♻️ Update reconciliation loop with reduced gocyclo

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -73,7 +73,7 @@ linters:
     # - gochecknoinits
     - goconst
     - gocritic
-    # - gocyclo
+    - gocyclo
     - gofmt
     - goimports
     - goprintffuncname
