--- a/config/crd/bases/proxmox.alperen.cloud_storagedownloadurls.yaml
+++ b/config/crd/bases/proxmox.alperen.cloud_storagedownloadurls.yaml
@@ -43,6 +43,7 @@ spec:
               compression:
                 type: string
               content:
+                pattern: \b(iso|vztmpl)\b
                 type: string
               filename:
                 type: string
