WIP: Add deletionProtection and autoStart support for VirtualMachine

--- a/config/crd/bases/proxmox.alperen.cloud_virtualmachines.yaml
+++ b/config/crd/bases/proxmox.alperen.cloud_virtualmachines.yaml
@@ -72,6 +72,20 @@ spec:
           spec:
             description: VirtualMachineSpec defines the desired state of VirtualMachine
             properties:
+              deletionProtection:
+                default: false
+                description: DeletionProtection is a flag that indicates whether the
+                  VM should be protected from deletion. If true, the VM will not be
+                  deleted when the Kubernetes resource is deleted. If not set, it
+                  defaults to false.
+                type: boolean
+              enableAutoStart:
+                default: true
+                description: EnableAutoStart is a flag that indicates whether the
+                  VM should automatically start when it's powered off. If true, the
+                  VM will start automatically when it's powered off. If not set, it
+                  defaults to true.
+                type: boolean
               name:
                 description: Name is the name of the VM
                 type: string
