--- a/config/crd/bases/proxmox.alperen.cloud_managedvirtualmachines.yaml
+++ b/config/crd/bases/proxmox.alperen.cloud_managedvirtualmachines.yaml
@@ -76,9 +76,7 @@ spec:
             description: VirtualMachineStatus defines the observed state of VirtualMachine
             properties:
               conditions:
-                description: 'INSERT ADDITIONAL STATUS FIELD - define observed state
-                  of cluster Important: Run "make" to regenerate code after modifying
-                  this file'
+                description: Conditions is the metav1.Condition of the Virtual Machine
                 items:
                   description: "Condition contains details for one aspect of the current
                     state of this API Resource. --- This struct is intended for direct
@@ -147,6 +145,8 @@ spec:
                   type: object
                 type: array
               status:
+                description: Status is the QEMU status of the Virtual Machine (state,
+                  node, uptime, id, IP address, os info)
                 properties:
                   IPAddress:
                     description: IPAddress is the IP address of the VM
