--- a/config/crd/bases/proxmox.alperen.cloud_virtualmachinesets.yaml
+++ b/config/crd/bases/proxmox.alperen.cloud_virtualmachinesets.yaml
@@ -34,13 +34,28 @@ spec:
           spec:
             description: VirtualMachineSetSpec defines the desired state of VirtualMachineSet
             properties:
+              deletionProtection:
+                default: false
+                description: DeletionProtection is a flag that indicates whether the
+                  VM should be protected from deletion. If true, the VM will not be
+                  deleted when the Kubernetes resource is deleted. If not set, it
+                  defaults to false.
+                type: boolean
+              enableAutoStart:
+                default: true
+                description: EnableAutoStart is a flag that indicates whether the
+                  VM should automatically start when it's powered off. If true, the
+                  VM will start automatically when it's powered off. If not set, it
+                  defaults to true.
+                type: boolean
               nodeName:
+                description: NodeName is the name of the target node of Proxmox
                 type: string
               replicas:
-                description: Foo is an example field of VirtualMachineSet. Edit virtualmachineset_types.go
-                  to remove/update
+                description: Replicas is the number of VMs
                 type: integer
               template:
+                description: Template is the name of the source VM template
                 properties:
                   cores:
                     description: Cores is the number of CPU cores
