--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -14,9 +14,7 @@ builds:
     flags:
       - -trimpath
     ldflags:
-      - -extldflags "-static"
-      - -s
-      - -w
+      - -s -w -X main.version={{ .Version }} -X main.commit={{ .Commit }} -X main.date={{ .CommitDate }} -X main.treeState={{ .IsGitDirty }} 
     goos:
       - darwin
       - linux
